# aws-tools

./: README.md  build-project.bat  clean  clean.bat  install.bat  pyproject.toml  uninstall  uninstall.bat
src/cli/: arg_functions.py  aws_sso_login.py
src/cli/s3/: bucket_download.py  bucket_upload.py  download_objects.py  list_bucket_objects_like.py  list_buckets_like.py  list_objects_like.py  list_urls_like.py  objects_json_to_url.py
src/s3/: s3_client.py
src/util/: aws_account_api.py  aws_login.py  json_helpers.py  logging.py
