
[project]
name = "aws-tools"
version = "2025.1.0"
authors = [
    { name = "Larry Page", email = "lawrence.page@live.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "MIT License" }
dependencies = [
    "attrs",
    "botocore",
    "boto3"
]

[project.urls]
Homepage = "https://github.com/lpage30/aws-tools"

[project.scripts]
s3-bucket-download = "cli.s3.bucket_download:main"
s3-bucket-upload =  "cli.s3.bucket_upload:main"
s3-list-buckets-like = "cli.s3.list_buckets_like:main"
s3-list-objects-like = "cli.s3.list_objects_like:main"
s3-list-bucket-objects-like = "cli.s3.list_bucket_objects_like:main"
s3-objects-json-to-url = "cli.s3.objects_json_to_url:main"
s3-download-objects = "cli.s3.download_objects:main"
aws-sso-login = "cli.aws_sso_login:main"

[tool.setuptools.packages.find]
where = ["src"]